# chana

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: 01-竞品与技术调研报告.md  02-PRD-刹那产品需求文档.md  03-交互设计稿.html  04-系统架构与技术方案.md  05-产品研发计划.md  06-需求管理宽表.md
requirements/: dashboard.html  req_manager.py  requirements.csv  schema.json
src/: capture.rs  main.rs  ui.rs
