[package]
name = "chana"
version = "0.1.0"
edition = "2021"
description = "刹那 — 跨平台截图录屏一体化工具 (Demo)"
authors = ["Chana Team"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "chana"
path = "src/main.rs"

[dependencies]
# 屏幕捕获
xcap = "0.9"

# GUI (即时模式)
egui = "0.30"
eframe = "0.30"

# 图像处理
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# 系统集成
arboard = "3.4"
tray-icon = "0.19"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"
env_logger = "0.11"

# 工具
anyhow = "1"
chrono = "0.4"
